--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Dependencies/websocket-sharp"]
+[submodule "websocket-sharp"]
 	path = Dependencies/websocket-sharp
-	url = https://github.com/sta/websocket-sharp
+	url = https://github.com/deadlyfingers/websocket-sharp
